change from serve to run for deployment

--- a/assets/templates/layout.html
+++ b/assets/templates/layout.html
@@ -10,7 +10,7 @@
 <body>
     <nav class="navbar">
         <div class="nav-container">
-            <a href="/" class="nav-brand">
+            <a href="./" class="nav-brand">
                 <img src="images/ocaml.svg" alt="OCaml" class="nav-logo">
                 Zeenat.dev
             </a>
