fix broken image

--- a/assets/templates/layout.html
+++ b/assets/templates/layout.html
@@ -11,7 +11,7 @@
     <nav class="navbar">
         <div class="nav-container">
             <a href="./" class="nav-brand">
-                <img src="images/ocaml.svg" alt="OCaml" class="nav-logo">
+                <img src="images/OCaml.svg" alt="OCaml" class="nav-logo">
                 Zeenat.dev
             </a>
             <div class="nav-links">
